--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,12 +29,13 @@
         android:hint="Rentrez votre identifiant"
         app:layout_constraintBottom_toTopOf="@+id/mdp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/mdp"
+        android:id="@+id/MDP"
         android:layout_width="236dp"
         android:layout_height="0dp"
         android:layout_marginBottom="60dp"
