--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
     android:id="@+id/drawerLayout"
     tools:context=".controller.loginPage">
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listview"
+        android:scrollbars="vertical"
+        android:layout_marginTop="130dp"
+        tools:listitem="@layout/appoint_futur_list"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10.0sp"/>
     
    <LinearLayout
        android:layout_width="match_parent"
@@ -21,7 +31,7 @@
            android:layout_height="wrap_content"
            android:text="Rendez-vous futur"
            android:layout_gravity="center"
-           android:layout_marginTop="40dp"
+           android:layout_marginTop="20dp"
            android:textColor="@color/pant"
            android:textSize="36sp"/>
 
