--- a/app/src/main/res/layout/appoint_futur_list.xml
+++ b/app/src/main/res/layout/appoint_futur_list.xml
@@ -117,5 +117,16 @@
                 android:textSize="16sp"></TextView>
         </RelativeLayout>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Info Client"
+            android:textSize="30sp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@color/pant"
+            android:textColor="@color/white"
+            android:padding="5dp"/>
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
