--- a/app/src/main/res/layout/report_list_view.xml
+++ b/app/src/main/res/layout/report_list_view.xml
@@ -62,15 +62,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Modifier Compte Rendu"
+        android:background="@color/pant"
+        android:textColor="@color/white"
         android:layout_marginTop="170dp"
-        android:textColor="@color/black"
-        android:text="Modifier"/>
-
-    <Button
-        android:id="@+id/modify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="190dp"
-        android:text="Modifier"/>
+        android:padding="5dp"/>
 
 </RelativeLayout>
