--- a/app/src/main/res/layout/activity_report_modify.xml
+++ b/app/src/main/res/layout/activity_report_modify.xml
@@ -62,6 +62,7 @@
             android:textSize="16sp" />
 
         <Button
+            android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Modifier"
