--- a/app/src/main/res/layout/activity_info_client.xml
+++ b/app/src/main/res/layout/activity_info_client.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawerLayout"
-    tools:context=".controller.ClientActivity">
+    tools:context=".controller.ClientActivity"
+    android:screenOrientation="portrait">
 
     <LinearLayout
         android:layout_width="match_parent"
