--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawerLayout"
-    tools:context=".controller.loginPage">
+    tools:context=".controller.loginPage"
+    android:screenOrientation="portrait">
 
     <ListView
         android:layout_width="match_parent"
