--- a/app/src/main/res/layout/activity_take_appoint.xml
+++ b/app/src/main/res/layout/activity_take_appoint.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawerLayout"
-    tools:context=".controller.takeAppoint">
+    tools:context=".controller.takeAppoint"
+    android:screenOrientation="portrait">
 
     <LinearLayout
         android:layout_width="match_parent"
